--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin-top: 5%;
 }
 
 section {
@@ -13,7 +14,8 @@ section {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   background-color: #fff;
   padding: 20px;
-  width: 30%;
+  width: 35%;
+  margin-top: 10px;
 }
 
 button {
@@ -76,6 +78,8 @@ form label {
 input[type="text"] {
   width: 95%;
   padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
 }
 
 input::-webkit-outer-spin-button,
@@ -87,7 +91,7 @@ input[type="number"] {
   width: 90%;
 
   padding: 8px;
-  /* border: 1px solid #ccc; */
+  border: 1px solid #ccc;
   border-radius: 3px;
   border: none;
 }
@@ -97,14 +101,44 @@ input[type="number"]:focus {
 }
 
 .button button {
-  background-color: #4caf50;
+  background-color: #04aa6d;
   color: white;
   padding: 10px 20px;
   border: none;
   border-radius: 3px;
   cursor: pointer;
+  font-weight: bold;
+  font-size: 15px;
 }
 
 .button button:hover {
-  background-color: #45a049;
+  background-color: #04aa6d;
+}
+
+table {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+table td,
+table th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+table tr:hover {
+  background-color: #ddd;
+}
+
+table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #04aa6d;
+  color: white;
 }
