--- a/templates/index.html
+++ b/templates/index.html
@@ -14,10 +14,12 @@
           <label for="nama">Nama:</label>
           <input type="text" id="nama" name="nama" required /><br />
         </div>
+        <!-- A -->
+        <h3>Spesifik Manajemen :</h3>
         <div class="produktivitas inputnilai">
-          <label for="productivity">Produktivitas: (1-10)</label>
+          <label for="A1">Leadership & Responsibility: (1-4)</label>
           <div class="input-number">
-            <input type="number" id="productivity" name="productivity" min="0" max="10" value="1" required /><br />
+            <input type="number" id="A1" name="A1" min="1" max="4" value="1" required /><br />
             <div class="input-number-actions">
               <button type="button">
                 <span>+</span>
@@ -28,11 +30,10 @@
             </div>
           </div>
         </div>
-
         <div class="kualitas inputnilai">
-          <label for="quality">Kualitas: (1-10)</label>
+          <label for="A2">Planning and Organization: (1-3)</label>
           <div class="input-number">
-            <input type="number" id="quality" name="quality" min="0" max="10" value="1" required /><br />
+            <input type="number" id="A2" name="A2" min="1" max="3" value="1" required /><br />
             <div class="input-number-actions">
               <button type="button">
                 <span>+</span>
@@ -43,11 +44,10 @@
             </div>
           </div>
         </div>
-
         <div class="disiplin inputnilai">
-          <label for="discipline">Disiplin: (1-10)</label>
+          <label for="A3">Integrated Solutions: (1-4)</label>
           <div class="input-number">
-            <input type="number" id="discipline" name="discipline" min="0" max="10" value="1" required /><br />
+            <input type="number" id="A3" name="A3" min="1" max="4" value="1" required /><br />
             <div class="input-number-actions">
               <button type="button">
                 <span>+</span>
@@ -59,9 +59,181 @@
           </div>
         </div>
         <div class="inisiatif inputnilai">
-          <label for="initiative">Inisiatif: (1-10)</label>
+          <label for="A4">Supervisory Skills: (1-4)</label>
           <div class="input-number">
-            <input type="number" id="initiative" name="initiative" min="0" max="10" value="1" required /><br />
+            <input type="number" id="A4" name="A4" min="1" max="4" value="1" required /><br />
+            <div class="input-number-actions">
+              <button type="button">
+                <span>+</span>
+              </button>
+              <button type="button">
+                <span>-</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- B -->
+        <h3>Spesifik Pekerjaan :</h3>
+        <div class="produktivitas inputnilai">
+          <label for="B1">Strategic Analytical Thinking: (1-3)</label>
+          <div class="input-number">
+            <input type="number" id="B1" name="B1" min="1" max="3" value="1" required /><br />
+            <div class="input-number-actions">
+              <button type="button">
+                <span>+</span>
+              </button>
+              <button type="button">
+                <span>-</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="kualitas inputnilai">
+          <label for="B2">Creative Process & Solutions: (1-5)</label>
+          <div class="input-number">
+            <input type="number" id="B2" name="B2" min="1" max="5" value="1" required /><br />
+            <div class="input-number-actions">
+              <button type="button">
+                <span>+</span>
+              </button>
+              <button type="button">
+                <span>-</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="disiplin inputnilai">
+          <label for="B3">Design Skills: (1-5)</label>
+          <div class="input-number">
+            <input type="number" id="B3" name="B3" min="1" max="5" value="1" required /><br />
+            <div class="input-number-actions">
+              <button type="button">
+                <span>+</span>
+              </button>
+              <button type="button">
+                <span>-</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="inisiatif inputnilai">
+          <label for="B4">Presentation (Written vs Verbal): (1-3)</label>
+          <div class="input-number">
+            <input type="number" id="B4" name="B4" min="1" max="3" value="1" required /><br />
+            <div class="input-number-actions">
+              <button type="button">
+                <span>+</span>
+              </button>
+              <button type="button">
+                <span>-</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="inisiatif inputnilai">
+          <label for="B5">Selling & Persuasion: (1-3)</label>
+          <div class="input-number">
+            <input type="number" id="B5" name="B5" min="1" max="3" value="1" required /><br />
+            <div class="input-number-actions">
+              <button type="button">
+                <span>+</span>
+              </button>
+              <button type="button">
+                <span>-</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="inisiatif inputnilai">
+          <label for="B6">Project Complexity: (1-5)</label>
+          <div class="input-number">
+            <input type="number" id="B6" name="B6" min="1" max="5" value="1" required /><br />
+            <div class="input-number-actions">
+              <button type="button">
+                <span>+</span>
+              </button>
+              <button type="button">
+                <span>-</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="inisiatif inputnilai">
+          <label for="B7">Project Versatility: (1-5)</label>
+          <div class="input-number">
+            <input type="number" id="B7" name="B7" min="1" max="5" value="1" required /><br />
+            <div class="input-number-actions">
+              <button type="button">
+                <span>+</span>
+              </button>
+              <button type="button">
+                <span>-</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="inisiatif inputnilai">
+          <label for="B8">Resourcefulness: (1-5)</label>
+          <div class="input-number">
+            <input type="number" id="B8" name="B8" min="1" max="5" value="1" required /><br />
+            <div class="input-number-actions">
+              <button type="button">
+                <span>+</span>
+              </button>
+              <button type="button">
+                <span>-</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- C -->
+        <h3>Kepribadian :</h3>
+        <div class="produktivitas inputnilai">
+          <label for="C1">Work Standards: (1-4)</label>
+          <div class="input-number">
+            <input type="number" id="C1" name="C1" min="1" max="4" value="1" required /><br />
+            <div class="input-number-actions">
+              <button type="button">
+                <span>+</span>
+              </button>
+              <button type="button">
+                <span>-</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="kualitas inputnilai">
+          <label for="C2">Motivations and Enthusiasm: (1-3)</label>
+          <div class="input-number">
+            <input type="number" id="C2" name="C2" min="1" max="3" value="1" required /><br />
+            <div class="input-number-actions">
+              <button type="button">
+                <span>+</span>
+              </button>
+              <button type="button">
+                <span>-</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="disiplin inputnilai">
+          <label for="C3">Contribution and Opinion: (1-3)</label>
+          <div class="input-number">
+            <input type="number" id="C3" name="C3" min="1" max="3" value="1" required /><br />
+            <div class="input-number-actions">
+              <button type="button">
+                <span>+</span>
+              </button>
+              <button type="button">
+                <span>-</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="inisiatif inputnilai">
+          <label for="C4">Discipline / Attendance: (1-3)</label>
+          <div class="input-number">
+            <input type="number" id="C4" name="C4" min="1" max="3" value="1" required /><br />
             <div class="input-number-actions">
               <button type="button">
                 <span>+</span>
@@ -82,22 +254,20 @@
       <table>
         <tr>
           <th>Nama</th>
-          <th>Produktivitas</th>
-          <th>Kualitas</th>
-          <th>Disiplin</th>
-          <th>Inisiatif</th>
+          <th>Spesifik Manajemen (23%)</th>
+          <th>Spesifik Pekerjaan (56%)</th>
+          <th>Kepribadian (21%)</th>
           <th>Predikat</th>
           <th>Score</th>
         </tr>
-        {% for employee in employees %}
+        {% for evaluation in evaluations %}
         <tr>
-          <td>{{ employee.nama }}</td>
-          <td>{{ employee.productivity }}</td>
-          <td>{{ employee.quality }}</td>
-          <td>{{ employee.discipline }}</td>
-          <td>{{ employee.initiative }}</td>
-          <td>{{ employee.predikat }}</td>
-          <td>{{ employee.score }}</td>
+          <td>{{ evaluation.nama }}</td>
+          <td>{{ evaluation.total_A }}</td>
+          <td>{{ evaluation.total_B }}</td>
+          <td>{{ evaluation.total_C }}</td>
+          <td>{{ evaluation.predikat }}</td>
+          <td>{{ evaluation.total_score }}</td>
         </tr>
         {% endfor %}
       </table>
