--- a/templates/index.html
+++ b/templates/index.html
@@ -254,9 +254,9 @@
       <table>
         <tr>
           <th>Nama</th>
-          <th>Spesifik Manajemen (23%)</th>
-          <th>Spesifik Pekerjaan (56%)</th>
-          <th>Kepribadian (21%)</th>
+          <th>Spesifik Manajemen</th>
+          <th>Spesifik Pekerjaan</th>
+          <th>Kepribadian</th>
           <th>Predikat</th>
           <th>Score</th>
         </tr>
